Switched to java 22 and Spring 3.2.4